# vess

./: .gitignore  Cargo.toml  LICENSE  README.md  copilot-instructions.md
.github/workflows/: ci.yml
android_host/: .gitignore  settings.gradle
android_host/app/: build.gradle
android_host/app/src/main/: AndroidManifest.xml
android_host/app/src/main/kotlin/com/vess/app/: CliDispatcher.kt  MainActivity.kt  TerminalActivity.kt  VessNode.kt  VessRpc.kt  VessService.kt
android_host/app/src/main/res/layout/: activity_main.xml  activity_terminal.xml
android_host/app/src/main/res/values/: strings.xml  themes.xml
vess-android/: Cargo.toml
vess-android/src/: lib.rs
vess-artery/: Cargo.toml  build.rs  versions.txt
vess-artery/src/: banishment.rs  dns_seed.rs  gossip.rs  handshake.rs  kademlia.rs  lib.rs  limbo_buffer.rs  node_runner.rs  ownership_registry.rs  persistence.rs  reputation.rs  rpc.rs  tag_cache.rs  tag_dht.rs  tag_resolver.rs
vess-cli/: Cargo.toml
vess-cli/src/: main.rs
vess-foundry/: Cargo.toml
vess-foundry/src/: lib.rs  merkle.rs  mint.rs  proof.rs  reforge.rs  seal.rs  spend_auth.rs  vm.rs
vess-kloak/: Cargo.toml
vess-kloak/src/: auto_reforge.rs  billfold.rs  lib.rs  payment.rs  persistence.rs  recovery.rs  selection.rs  tag_cache.rs
vess-protocol/: Cargo.toml
vess-protocol/src/: lib.rs
vess-stealth/: Cargo.toml
vess-stealth/src/: lib.rs
vess-tag/: Cargo.toml
vess-tag/src/: lib.rs
vess-tests/: Cargo.toml
vess-tests/src/: lib.rs
vess-tests/tests/: five_node_network.rs  integration.rs  network.rs  three_node_e2e.rs
vess-vascular/: Cargo.toml
vess-vascular/src/: lib.rs
