[package]
name = "vess-artery"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[features]
test-pow = ["vess-tag/test-pow"]
test-mint = ["vess-foundry/test-mint"]

[dependencies]
vess-stealth = { path = "../vess-stealth" }
vess-foundry = { path = "../vess-foundry" }
vess-protocol = { path = "../vess-protocol" }
vess-tag = { path = "../vess-tag" }
vess-vascular = { path = "../vess-vascular" }
vess-kloak = { path = "../vess-kloak" }
argon2 = "0.5"
blake3 = "1"
cuckoofilter = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
rand = "0.8"
anyhow = "1"
tracing = "0.1"
iroh = "0.97"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
hickory-resolver = "0.26"

[build-dependencies]
blake3 = "1"

[dev-dependencies]
tempfile = "3"
vess-tag = { path = "../vess-tag", features = ["test-pow"] }
