[package]
name = "vess-cli"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
vess-vascular = { path = "../vess-vascular" }
vess-kloak = { path = "../vess-kloak" }
vess-foundry = { path = "../vess-foundry" }
vess-stealth = { path = "../vess-stealth" }
vess-protocol = { path = "../vess-protocol" }
vess-tag = { path = "../vess-tag" }
vess-artery = { path = "../vess-artery" }
iroh = "0.97"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
rand = "0.8"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
