[package]
name = "vess-foundry"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[features]
test-mint = []

[dependencies]
blake3 = "1"
chacha20poly1305 = "0.10"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
anyhow = "1"
tracing = "0.1"
postcard = { version = "1", features = ["alloc"] }
