[package]
name = "vess-kloak"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
vess-stealth = { path = "../vess-stealth" }
vess-foundry = { path = "../vess-foundry" }
vess-tag = { path = "../vess-tag" }
vess-protocol = { path = "../vess-protocol" }
blake3 = "1"
argon2 = "0.5"
bip39 = "2"
chacha20poly1305 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
rand = "0.8"
anyhow = "1"
tracing = "0.1"
