[package]
name = "vess-stealth"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
ml-kem = { version = "0.2", features = ["deterministic"] }
chacha20poly1305 = "0.10"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1"
